@@ -3,5 +3,7 @@
 require_once 'lib/functions.php';
 require_once 'lib/object.php';
 require_once 'lib/enumerable.php';
+require_once 'lib/array.php';
+require_once 'lib/hash.php';
 
 ?>
