@@ -2,7 +2,7 @@
 
 require_once '../phuby.php';
 
-$e = new Enumerable;
+$e = new A;
 
 $e[] = 'ing';
 $e[] = 'cool';
@@ -13,7 +13,7 @@ foreach ($e as $k => $v) {
 }
 
 echo "***COLLECT***\n";
-print_r($e->collect('return $key;')->to_a());
+print_r($e->collect('return $key;')->array);
 
 if ($e->any('return $key == 1;')) echo "true\n";
 if ($e->any('return $key == 4;')) echo "true\n";
@@ -21,18 +21,18 @@ if ($e->any('return $key == 4;')) echo "true\n";
 echo "***INJECT***\n";
 print_r($e->inject(array(), '$object["injected_$key"] = $value; return $object;'));
 
-$e = new Enumerable;
+$e = new H;
 $e['short'] = 4;
 $e['this is a longer one'] = 12;
 $e['this is long'] = 2;
 
 echo "***ARRAY***\n";
-print_r($e->to_a());
+print_r($e->array);
 
 echo "***SORT***\n";
-print_r($e->sort()->to_a());
+print_r($e->sort()->array);
 
 echo "***SORT_BY***\n";
-print_r($e->sort_by('return strlen($key);')->to_a());
+print_r($e->sort_by('return strlen($key);')->array);
 
 ?>
